fixed dropdown menu error and short header, added profile image to dropdown menu on mobile leg profiles

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -653,13 +653,13 @@ body {
    }
 }
 
-@media all and (min-width: 768px) and (max-width: 1500px) {
+@media all and (min-width: 768px) and (max-width: 3000px) {
    .mobileReveal {
       display: none;
    }
 }
 
-@media all and (min-width: 1017px) and (max-width:1500px) {
+@media all and (min-width: 1017px) and (max-width:3000px) {
    .mobileReveal {
       display: none;
    }
